# postulator

./: .gitignore  README.md  _commit_msg.txt  pyproject.toml  requirements.txt
.ai-docs/: httpx.md  markdown-it-py.md  pydantic.md  python-docx.md  python-dotenv.md  scraperator.md
docs/: CLI.md  CONTENTFUL_SCHEMA.md  PLACEHOLDER_IMPROVEMENTS.md  dump-tool.md
docs/schema/: asin.md  asinsCarousel.md  asinsList.md  audibleLink.md  author.md  blogSettings.md  carousel.md  carouselSimpleItem.md  category.md  contentImage.md  contentRawEmbed.md  customStyle.md  featuredReviews.md  fullBleedHero.md  index.md  interview.md  jsonLd.md  nt_audience.md  nt_experience.md  nt_mergetag.md  pageSettings.md  post.md  recommendedListens.md  seoSettings.md  tag.md  typography.md  uiContentGrid.md  uiCtaSection.md  uiCustomCopy.md  uiEditorsCarousel.md  uiHeadingSection.md  uiPageRecommendedContent.md  uiVideo.md  youtubeVideo.md
postulator/: __init__.py  cli.py  events.py  markdown.py  marketplace.py  models.py  nodes.py  table.py
postulator/adapters/: __init__.py  base.py  scraperator.py
postulator/cli/: __init__.py  __main__.py  _auth.py  (+3 more)
smoke_tests/: test_contentful_to_docx.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
test_output/: de_7o06g0_export.docx  mock_article_de.docx  mock_article_de.md
test_scripts/: create_mock_article_de.py  inspect_entry.py  test_asin_upload.py  test_create_asins_list_custom.py  test_full_post.py  test_heavy_post.py  test_read_asins_list.py  upload_mock_article_de.py
tools/: dump.py
(+56 files in other folders)
